# crawlerIA

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  MANUAL_GITHUB_SETUP.md  README.md  SHARING_OPTIONS.md  push_to_github.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: run-tests.yml
config/: __init__.py  config.py
src/: __init__.py  main.py  utils.py
src/crawler/: __init__.py  crawler.py
src/document_processor/: __init__.py  processor.py
src/response_generator/: __init__.py  generator.py
src/retrieval/: __init__.py  retriever.py
tests/: README.md  __init__.py  test_crawler.py  test_crawler_integration.py
