[tool.poetry]
name = "crawleria"
version = "0.1.0"
description = ""
authors = ["yousmaaza <dataforsciences@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src" },
    { include = "config" }
]
[tool.poetry.dependencies]
python = "^3.11"
firecrawl = "*"
colivara-py = "*"
transformers = "4.38.0"
torch = ">=2.0.0"
pillow = ">=10.0.0"
langchain = ">=0.1.0"
playwright = ">=1.40.0"
asyncio = ">=3.4.3"
pydantic = ">=2.0.0"
faiss-cpu = ">=1.7.4"
sentence-transformers = ">=2.2.2"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"
python-dotenv = ">=1.0.0"
tqdm = ">=4.65.0"
loguru = ">=0.7.0"
tenacity = ">=8.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
black = ">=23.7.0"
pylint = ">=2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
